DealSettings 종목들(stock, upbit)에 세팅 적용